--- a/package.json
+++ b/package.json
@@ -6,10 +6,30 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "axios": "^0.21.4",
+    "ethers": "^5.4.6",
+    "firebase": "^8.9.1",
+    "keccak256": "^1.0.6",
+    "merkletreejs": "^0.2.27",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0",
+    "react-dom": "^17.0.2",
+    "react-notifications": "^1.7.2",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
+    "react-slideshow-image": "^3.6.0",
+    "sass": "^1.43.3",
+    "truffle-plugin-verify": "^0.5.15",
+    "web-vitals": "^1.0.1",
+    "web3": "^1.6.0",
+
+    "web3modal": "^1.9.8",
+    "ethereum-checksum-address": "^0.0.7",
+    "@coinbase/wallet-sdk": "3.0.1",
+    "@walletconnect/ethereum-provider": "^1.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
